# ITU-Projekt

./: .gitignore  CMakeLists.txt  README.txt  testDB.sqlite
gui/: WifiMgr.pro  mainwindow.ui  wifinetworklistitem.cpp  wifinetworklistitem.h  wifinetworklistitem.ui
src/core/: CMakeLists.txt  Exception.h  NetworkManagerDBusObject.cpp  NetworkManagerDBusObject.h  WifiDevice.cpp  WifiDevice.h  WifiManager.cpp  WifiManager.h  WifiNetwork.cpp  WifiNetwork.h  databasesqlite.cpp  databasesqlite.h  dummy.cpp  dummy.h
src/gui/: CMakeLists.txt  keyEventFilter.cpp  keyEventFilter.h  main.cpp  mainwindow.cpp  mainwindow.h  wifinetworklistitem.cpp  wifinetworklistitem.h
